# nav2_bt_wkshp

./: README.md
navigation2/nav2_behavior_tree/: CMakeLists.txt  nav2_tree_nodes.xml
navigation2/nav2_behavior_tree/plugins/action/: aruco_detection_action.cpp  aruco_tracking_action.cpp  feature_detection_action.cpp
navigation2/nav2_behaviors/: CMakeLists.txt  behavior_plugin.xml  package.xml
navigation2/nav2_behaviors/plugins/: aruco_detection.cpp  aruco_tracking.cpp  feature_detection.cpp
navigation2/nav2_behaviors/src/: behavior_server.cpp
navigation2/nav2_bringup/params/: nav2_params.yaml
navigation2/nav2_bt_navigator/: CMakeLists.txt
navigation2/nav2_bt_navigator/behavior_trees/: auto_docking_with_features_and_recovery.xml
navigation2/nav2_bt_navigator/src/: bt_navigator.cpp
navigation2/nav2_mppi_controller/test/: noise_generator_test.cpp
navigation2/nav2_msgs/: CMakeLists.txt
navigation2/nav2_msgs/action/: ArucoDetection.action  ArucoTracking.action  AutoDocking.action  FeatureDetection.action
navigation2/nav2_msgs/msg/: AutoDocking.msg
ros2_aruco/config/: aruco_parameters.yaml
ros2_aruco/ros2_aruco/: aruco_generate_marker.py  aruco_node.py
turtlebot_bt_simulation/turtlebot_gazebo/: CMakeLists.txt  package.xml
turtlebot_bt_simulation/turtlebot_gazebo/include/turtlebot_gazebo/: feature_detection.hpp
turtlebot_bt_simulation/turtlebot_gazebo/launch/: start_simulation.launch.py
turtlebot_bt_simulation/turtlebot_gazebo/src/: feature_detection.cpp
turtlebot_bt_simulation/turtlebot_nav2/launch/: start_navigation.launch.py
(+9 files in other folders)
